<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateProfileActivity">

    <ImageView
        android:id="@+id/ivProfileImage"
        android:layout_width="172dp"
        android:layout_height="102dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="119dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toTopOf="@+id/btnGallery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_account_box_black_24dp" />

    <Button
        android:id="@+id/btnGallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="114dp"
        android:layout_marginEnd="113dp"
        android:layout_weight="1"
        android:background="#F54646"
        android:text="@string/btn_picture_gallery"
        app:layout_constraintBottom_toTopOf="@+id/etFirstName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivProfileImage" />

    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="331dp"
        android:layout_height="48dp"
        android:layout_weight="1"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/firstName"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/etLastName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGallery" />

    <EditText
        android:id="@+id/etLastName"
        android:layout_width="331dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/lastName"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/etProfileDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFirstName" />

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="66dp"
        android:layout_weight="1"
        android:background="#F54646"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etProfileDescription" />

    <EditText
        android:id="@+id/etProfileDescription"
        android:layout_width="331dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/btnConfirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etLastName" />

</androidx.constraintlayout.widget.ConstraintLayout>